# s3fetch

./: .darglint  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPER.md  Justfile  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt
.claude/agents/: code-reviewer.md
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh  post_start.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-and-publish-dev-package.yml  build-and-publish.yml  pre-commit.yml  test-build-and-publish.yml  test.yml  test.yml.disabled
benchmarks/: run_benchmarks.sh  setup_ec2.sh
demo/: demo.sh  record.sh
infra/: s3-bucket.yaml
requirements/: requirements-hatch-test.py3.10.txt  requirements-hatch-test.py3.11.txt  requirements-hatch-test.py3.12.txt  requirements-hatch-test.py3.13.txt  requirements-hatch-test.py3.14.txt  requirements-hatch-test.py3.9.txt  requirements-test.py3.10.txt  requirements-test.py3.11.txt  requirements-test.py3.12.txt  requirements-test.py3.9.txt
scripts/: create_testdata.sh  populate_test_bucket.py
src/s3dl/: __init__.py  command.py  exceptions.py
src/s3fetch/: __init__.py  __main__.py  api.py  aws.py  cli.py  command.py  exceptions.py  fs.py  s3.py  utils.py
tests/: test_s3dl.py  test_s3fetch.py
tests/e2e/: test_s3fetch.py
tests/integration/: conftest.py  test_boto3.py  test_cli_error_handling.py  test_cli_progress.py  test_download_reporting.py  test_dry_run.py  test_progress_tracking.py  test_regex_filtering.py
tests/unit/: conftest.py  test_aws.py  test_cli.py  test_fs.py  test_s3.py  test_s3fetch_old.py  test_utils.py
